[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/images/sprites/Placeholder_Background.png" type="Texture" id=1]
[ext_resource path="res://src/sceneless_scripts/autoload/MusicManager.gd" type="Script" id=2]
[ext_resource path="res://src/scenes/levels/prototypes/kf/scripts/kf_lvl_ButtonTests.gd" type="Script" id=3]
[ext_resource path="res://src/scenes/game_objects/BackgroundsTileMap.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/scenes/levels/Transitions.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/scenes/game_objects/obstacles/Launcher.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/scenes/game_objects/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/scenes/game_objects/WallsTileMap.tscn" type="PackedScene" id=8]
[ext_resource path="res://World/Props/Button.tscn" type="PackedScene" id=9]
[ext_resource path="res://World/Props/Bridge.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/scenes/game_objects/obstacles/HomingObstacle.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/scenes/game_objects/obstacles/Spike.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/scenes/game_objects/obstacles/PathObstacle.tscn" type="PackedScene" id=13]
[ext_resource path="res://World/Props/GrabbyBox.tscn" type="PackedScene" id=14]

[node name="kf_lvl_ButtonTests" type="Node2D"]
script = ExtResource( 3 )

[node name="MusicManager" type="Node" parent="."]
script = ExtResource( 2 )

[node name="TileMapContainer" type="Node" parent="."]

[node name="Background" type="TextureRect" parent="TileMapContainer"]
visible = false
margin_left = -40.0
margin_top = -72.0
margin_right = 1144.0
margin_bottom = 232.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundsTileMap" parent="TileMapContainer" instance=ExtResource( 4 )]

[node name="WallsTileMap" parent="TileMapContainer" instance=ExtResource( 8 )]
tile_data = PoolIntArray( -131073, 0, 0, -196608, 0, 0, -1, 0, 0, -65536, 0, 0, 65596, 0, 0, 65597, 0, 0, 131132, 0, 0, 131133, 0, 0, 196668, 0, 0, 196669, 0, 0, 262204, 0, 0, 262205, 0, 0, 327740, 0, 0, 327741, 0, 0, 393276, 0, 0, 393277, 0, 0, 458812, 0, 0, 458813, 0, 0, 524348, 0, 0, 524349, 0, 0, 589884, 0, 0, 589885, 0, 0, 655420, 0, 0, 655421, 0, 0, 720897, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720922, 0, 0, 720923, 0, 0, 720924, 0, 0, 720927, 0, 0, 720928, 0, 0, 720937, 0, 0, 720938, 0, 0, 720939, 0, 0, 720940, 0, 0, 720941, 0, 0, 720942, 0, 0, 720943, 0, 0, 720944, 0, 0, 720945, 0, 0, 720948, 0, 0, 720949, 0, 0, 720950, 0, 0, 720951, 0, 0, 720952, 0, 0, 720953, 0, 0, 720954, 0, 0, 720955, 0, 0, 720956, 0, 0, 720957, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786441, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 786456, 0, 0, 786457, 0, 0, 786458, 0, 0, 786459, 0, 0, 786460, 0, 0, 786461, 0, 0, 786462, 0, 0, 786463, 0, 0, 786473, 0, 0, 786474, 0, 0, 786475, 0, 0, 786476, 0, 0, 786477, 0, 0, 786478, 0, 0, 786479, 0, 0, 786480, 0, 0, 786481, 0, 0, 786482, 0, 0, 786483, 0, 0, 786484, 0, 0, 786485, 0, 0, 786486, 0, 0, 786487, 0, 0, 786488, 0, 0, 786489, 0, 0, 786490, 0, 0, 786491, 0, 0, 786492, 0, 0, 786493, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1507309, 1, 0, 1507310, 1, 0, 1507311, 1, 0, 1507312, 1, 0, 1507313, 1, 0, 1507314, 1, 0, 1507315, 1, 0, 1507316, 1, 0, 1507317, 1, 0, 1507318, 1, 0, 1507319, 1, 0, 1507320, 1, 0, 1507321, 1, 0, 1507322, 1, 0, 1507323, 1, 0, 1507324, 1, 0, 1507325, 1, 0, 1507326, 1, 0, 1507327, 1, 0, 1441792, 1, 0, 1441793, 1, 0, 1441794, 1, 0, 1441795, 1, 0, 1441796, 1, 0, 1441797, 1, 0, 1441798, 1, 0, 1441799, 1, 0, 1441800, 1, 0, 1441801, 1, 0, 1441802, 1, 0, 1441803, 1, 0, 1441804, 1, 0, 1441805, 1, 0, 1441806, 1, 0, 1441807, 1, 0, 1441808, 1, 0, 1441809, 1, 0, 1441810, 1, 0, 1441811, 1, 0, 1441812, 1, 0, 1441813, 1, 0, 1441814, 1, 0, 1441815, 1, 0, 1441816, 1, 0, 1441817, 1, 0, 1441818, 1, 0, 1441819, 1, 0, 1441820, 1, 0, 1441821, 1, 0, 1441822, 1, 0, 1441823, 1, 0, 1441824, 1, 0, 1441825, 1, 0, 1441826, 1, 0, 1441827, 1, 0, 1441828, 1, 0, 1441829, 1, 0, 1441830, 1, 0, 1441831, 1, 0, 1441832, 1, 0, 1441833, 1, 0, 1441834, 1, 0, 1441835, 1, 0, 1441836, 1, 0, 1441837, 1, 0, 1441838, 1, 0, 1441839, 1, 0, 1441840, 1, 0, 1441841, 1, 0, 1441842, 1, 0 )

[node name="SpikeContainer" type="Node" parent="."]

[node name="Spike" parent="SpikeContainer" instance=ExtResource( 12 )]
position = Vector2( -84.1577, 172.242 )

[node name="LauncherContainer" type="Node" parent="."]

[node name="Launcher" parent="LauncherContainer" instance=ExtResource( 6 )]
position = Vector2( -51.6188, 125.158 )
rotation = 3.14159
firing_direction = 2

[node name="ButtonContainer" type="Node" parent="."]

[node name="Button" parent="ButtonContainer" instance=ExtResource( 9 )]
position = Vector2( -126.889, 173.155 )

[node name="Button2" parent="ButtonContainer" instance=ExtResource( 9 )]
position = Vector2( -97.451, 172.834 )

[node name="Button3" parent="ButtonContainer" instance=ExtResource( 9 )]
position = Vector2( -50.8355, 172.314 )

[node name="Button4" parent="ButtonContainer" instance=ExtResource( 9 )]
position = Vector2( 5.67982, 173.575 )

[node name="Button5" parent="ButtonContainer" instance=ExtResource( 9 )]
position = Vector2( 93.2218, 171.473 )

[node name="Button6" parent="ButtonContainer" instance=ExtResource( 9 )]
position = Vector2( 116.346, 171.473 )

[node name="Button7" parent="ButtonContainer" instance=ExtResource( 9 )]
position = Vector2( 221.977, 172.222 )

[node name="BridgeContainer" type="Node" parent="."]

[node name="Bridge" parent="BridgeContainer" instance=ExtResource( 10 )]
position = Vector2( 8.48529, 108.187 )
closedPosition = 1

[node name="HomingObstContainer" type="Node" parent="."]

[node name="HomingObstacle" parent="HomingObstContainer" instance=ExtResource( 11 )]
position = Vector2( 228.492, 119.115 )

[node name="PathObstContainer" type="Node" parent="."]

[node name="PathObstacle" parent="PathObstContainer" instance=ExtResource( 13 )]
position = Vector2( 40.5732, 117.708 )
movement_speed = 150

[node name="GrabableObjsContainer" type="Node" parent="."]

[node name="GrabbyBox" parent="GrabableObjsContainer" instance=ExtResource( 14 )]
position = Vector2( 36.9995, 168.179 )

[node name="PhaseObstContainer" type="Node" parent="."]

[node name="HintBoxContainer" type="Node" parent="."]

[node name="DeadZoneContainer" type="Node" parent="."]

[node name="CheckpointContainer" type="Node" parent="."]

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( -9.79527, 171.175 )
collision_mask = 15

[node name="Transitions" parent="." instance=ExtResource( 5 )]
position = Vector2( -2035.01, -3856.93 )
z_index = 10
[connection signal="button_just_pressed" from="ButtonContainer/Button" to="." method="_on_Button_button_just_pressed"]
[connection signal="button_pressed" from="ButtonContainer/Button" to="." method="_on_Button_button_pressed"]
[connection signal="button_unpressed" from="ButtonContainer/Button" to="." method="_on_Button_button_unpressed"]
[connection signal="button_just_pressed" from="ButtonContainer/Button2" to="." method="_on_Button2_button_just_pressed"]
[connection signal="button_just_pressed" from="ButtonContainer/Button3" to="." method="_on_Button3_button_just_pressed"]
[connection signal="button_just_pressed" from="ButtonContainer/Button4" to="." method="_on_Button4_button_just_pressed"]
[connection signal="button_just_pressed" from="ButtonContainer/Button6" to="." method="_on_Button6_button_just_pressed"]
[connection signal="button_just_pressed" from="ButtonContainer/Button7" to="." method="_on_Button7_button_just_pressed"]
